# QSOT-Compiler

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  run_dashboard.bat
config/: QSOTCompiler.yaml  channels.json  rho0.json
docs/: CODE_REVIEW_RESPONSE.md  SCIENTIFIC_PUBLICATION_GUIDE.md  protocol (1).txt
docs-thesis/: Publication_Roadmap.md  README.md
docs-thesis/arxiv-cpc/: Paper_A_Methodology_CPC.tex  Paper_B_Physics.tex  index.html
docs/Research Thesis/: Publication_Roadmap.md  README.md
docs/Research Thesis/arxiv-cpc/: Paper_A_Methodology_CPC.tex  Paper_B_Physics.tex  index.html
docs/paper_data/: raw_data.csv
scripts/: asdp_run.py  experiment_grand_sweep.py  generate_paper_data.py  plot_paper_figure.py  start.sh
src/qsot/core/: compiler.py  memory_kernel.py  optimizer.py  protocol_gen.py
src/qsot/physics/: entanglement.py  relativity.py  toe_accessibility.py
src/qsot/server/: api_server.py  dashboard.py
src/qsot/utils/: loader.py  math_utils.py  visualizer.py
tests/: conftest.py  test_compiler.py  test_loader.py  test_physics.py
